--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "eslint-config-next": "^13.4.7",
+    "i18next": "^23.2.3",
     "next": "^13.4.1",
+    "next-i18next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.1",
+    "styled-components": "^6.0.0-rc.5",
     "ui": "*"
   },
   "devDependencies": {
@@ -19,6 +24,7 @@
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "eslint-config-custom": "*",
+    "eslint-config-next": "^13.4.7",
     "tsconfig": "*",
     "typescript": "^4.5.3"
   }
