--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "devDependencies": {
     "@turbo/gen": "^1.9.7",
+    "dotenv-mono": "^1.3.10",
     "eslint": "^7.32.0",
     "eslint-config-custom": "*",
-    "prettier": "^2.5.1",
+    "prettier": "^2.8.8",
     "turbo": "latest"
   },
   "name": "NewsApplication",
